fix: headings on mobile not wrapping

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,8 @@ h5,
 h6 {
   font-family: "Prompt";
   text-align: center;
+  word-wrap: break-word ;
+  white-space: normal;
 }
 
 h1 {
